# wikipicture-web

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  fly.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  e2e.yml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/app/: config.py  main.py  models.py  rate_limit.py  report.py  storage.py
backend/app/routers/: jobs.py  results.py  upload.py
backend/app/tasks/: process.py
backend/tests/: test_process_rate_limit.py
e2e/: package.json  playwright.config.ts
e2e/tests/: download.spec.ts  error-handling.spec.ts  helpers.ts  rate-limit.spec.ts  results.spec.ts  upload.spec.ts
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: DownloadButton.tsx  DropZone.tsx  PrivacyBanner.tsx  ProgressView.tsx  ResultsTable.tsx
frontend/src/hooks/: useProgress.ts  useUpload.ts
nginx/: Dockerfile  nginx.conf
