[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikipicture-web"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.44.0",
    "celery[redis]>=5.3",
    "redis>=7.4.0",
    "python-multipart>=0.0.9",
    "aiofiles>=25.1.0",
    "pydantic-settings>=2.13.1",
    "jinja2>=3.1",
    "Pillow>=12.2.0",
    "pillow-heif>=0.13",
    "wikipicture>=0.2.0",
    "python-magic>=0.4.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
