[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikipicture-web"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "celery[redis]>=5.3",
    "redis>=8.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=25.1.0",
    "pydantic-settings>=2.14.0",
    "jinja2>=3.1.6",
    "Pillow>=12.3.0",
    "pillow-heif>=1.4.0",
    "wikipicture>=0.2.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
test = ["pytest>=9.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
